Update README with VS Code run instructions and styling
Added instructions for running the BattleshipsGUI in VS Code and included UI styling details.